[package]
edition = "2018"
name = "learn-wgpu"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
env_logger = "0.8"
image = "0.23"
log = "0.4"
pollster = "0.2"
rand = "0.8"
rayon = "1.4"
tobj = "3.0"
wgpu = "0.9"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
